# iso-codes-locale-resolver

./: configure.ac
debian/: changelog  control  copyright  rules
lib/: Makefile.am  locale-resolver.c
